Define permissions in an enum

--- a/core/src/main/resources/messages.properties
+++ b/core/src/main/resources/messages.properties
@@ -1,4 +1,5 @@
-main.
+template.enabled=Enabled in {0}ms
+template.config.load.fail=Failed to load configuration
 
 reloadCommandDescription=Reloads the TemplatePlugin configuration.
 reloadCommandSuccess=TemplatePlugin configuration has been reloaded.
