Add update checker

--- a/core/src/main/resources/messages.properties
+++ b/core/src/main/resources/messages.properties
@@ -1,5 +1,8 @@
 template.enabled=Enabled in {0}ms
 template.config.load.fail=Failed to load configuration
+template.up-to-date=Running the latest version.
+template.outdated=Your version is outdated.
+template.failed=Failed to check for updates.
 
 reloadCommandDescription=Reloads the TemplatePlugin configuration.
 reloadCommandSuccess=TemplatePlugin configuration has been reloaded.
