Add command aliases

--- a/core/src/main/resources/messages.properties
+++ b/core/src/main/resources/messages.properties
@@ -4,6 +4,6 @@ template.up-to-date=Running the latest version.
 template.outdated=Your version is outdated.
 template.failed=Failed to check for updates.
 
-reloadCommandDescription=Reloads the TemplatePlugin configuration.
-reloadCommandSuccess=TemplatePlugin configuration has been reloaded.
-reloadCommandFailure=Failed to reload TemplatePlugin configuration, check console for details.
+command.reload.description=Reloads the TemplatePlugin configuration.
+command.reload.success=TemplatePlugin configuration has been reloaded.
+command.reload.fail=Failed to reload TemplatePlugin configuration, check console for details.
