Add a basic version command

--- a/core/src/main/resources/messages.properties
+++ b/core/src/main/resources/messages.properties
@@ -4,6 +4,7 @@ template.up-to-date=Running the latest version.
 template.outdated=Your version is outdated.
 template.failed=Failed to check for updates.
 
-command.reload.description=Reloads the TemplatePlugin configuration.
+command.reload.description=Reloads the plugin configuration.
 command.reload.success=TemplatePlugin configuration has been reloaded.
 command.reload.fail=Failed to reload TemplatePlugin configuration, check console for details.
+command.version.description=Displays the version of the plugin.
